Added files to set up for styling

--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title> Peter Jardine's Protfolio</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="small-nav">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span class="menu-line"></span>
+        <span class="menu-line"></span>
+        <span class="menu-line"></span>
         <div></div>
     </div>
 
     <div class="big-nav">
-        <div>P</div>
+        <div><a href="#">P</a></div>
         <ul>
-            <li>My Portfolio</li>
-            <li>About Me</li>
-            <li>Coding Examples</li>
-            <li>SCS Scheme</li>
+            <li><a href="#">My Portfolio</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Coding Examples</a></li>
+            <li><a href="#">Scheme</a></li>
         </ul>
-        <div>Contact Me</div>
-        <div class="social-media"></div>
+        <div><a href="#">Contact Me</a></div>
+        <div class="social-media">
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
     </div>
 
     <header>
