started to style the menus

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <span class="menu-line"></span>
         <span class="menu-line"></span>
         <span class="menu-line"></span>
-        <div></div>
+        <div>Menu</div>
     </div>
 
     <div class="big-nav">
-        <div><a href="#">P</a></div>
+        <a href="#"><div class="block-letter">P</div></a>
         <ul>
-            <li><a href="#">My Portfolio</a></li>
+            <a href="#"><li>My Portfolio</li></a>
             <li><a href="#">About Me</a></li>
             <li><a href="#">Coding Examples</a></li>
             <li><a href="#">Scheme</a></li>
@@ -31,11 +31,14 @@
         </div>
     </div>
 
-    <header>
-        <div><h1>My Name is Peter Jardine</h1></div>
-        <div><h3>I'm a Web Developer</h3></div>
-        <div>Scroll Down</div>
-    </header>
-    
+    <div class="main">
+
+        <header>
+            <div><h1>My Name is Peter Jardine</h1></div>
+            <div><h3>I'm a Web Developer</h3></div>
+            <div>Scroll Down</div>
+        </header>
+
+    </div>
 </body>
 </html>
