Created the hero image in the header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title> Peter Jardine's Protfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -18,12 +20,12 @@
     </div>
 
     <div class="big-nav">
-        <a href="#"><div class="block-letter">P</div></a>
-        <ul>
-            <a href="#"><li>My Portfolio</li></a>
+        <div class="block-letter"><a href="#">P</a></div>
+        <ul class="big-nav-list">
+            <li><a href="#">My Portfolio</a></li>
             <li><a href="#">About Me</a></li>
             <li><a href="#">Coding Examples</a></li>
-            <li><a href="#">Scheme</a></li>
+            <li><a href="#">SCS Scheme</a></li>
         </ul>
         <div><a href="#">Contact Me</a></div>
         <div class="social-media">
@@ -34,10 +36,47 @@
     <div class="main">
 
         <header>
-            <div><h1>My Name is Peter Jardine</h1></div>
-            <div><h3>I'm a Web Developer</h3></div>
-            <div>Scroll Down</div>
+            <div id="introduction">
+                <div ><h1 id="me">My Name is Peter Jardine</h1></div>
+                <div ><h3 id="role">I'm a Web Developer</h3></div>
+                
+            </div>
+            <div id="scroll-call">Scroll Down</div>
+            <div ><i id="scroll-call-arrow"></i></div>
         </header>
+
+        <div class="projects">
+            <div class="project">
+                <div>heddyet</div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="project">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="project">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="project">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="project">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="project">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
 
     </div>
 </body>
