Did a lot of work on the projects and contact area

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="big-nav">
         <div class="block-letter"><a href="#">P</a></div>
         <ul class="big-nav-list">
-            <li><a href="#">My Portfolio</a></li>
+            <li><a href="#projects">My Portfolio</a></li>
             <li><a href="#">About Me</a></li>
             <li><a href="#">Coding Examples</a></li>
             <li><a href="#">SCS Scheme</a></li>
         </ul>
-        <div><a href="#">Contact Me</a></div>
+        <div><a href="#contact-area">Contact Me</a></div>
         <div class="social-media">
             <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
@@ -41,42 +41,63 @@
                 <div ><h3 id="role">I'm a Web Developer</h3></div>
                 
             </div>
-            <div id="scroll-call">Scroll Down</div>
-            <div ><i id="scroll-call-arrow"></i></div>
+            <a href="#projects" id="scroll-area">
+                <div id="scroll-call">Scroll Down</div>
+                <div ><i id="scroll-call-arrow"></i></div>
+            </a>
         </header>
 
-        <div class="projects">
+        <div id="projects" class="projects">
             <div class="project">
-                <div>heddyet</div>
-                <div></div>
-                <div></div>
+                <div>Project title</div>
+                <a href="#projects" id="project-one" class="project-button">Project</a>
+                <a href="#projects" id="read-more-one" class="project-button">Read More</a>
             </div>
             <div class="project">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>Project title</div>
+                <a href="#projects" id="project-two" class="project-button">Project</a>
+                <a href="#projects" id="read-more-two" class="project-button">Read More</a>
             </div>
             <div class="project">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>Project title</div>
+                <a href="#projects" id="project-three" class="project-button">Project</a>
+                <a href="#projects" id="read-more-three" class="project-button">Read More</a>
             </div>
             <div class="project">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>Project title</div>
+                <a href="#projects" id="project-four" class="project-button">Project</a>
+                <a href="#projects" id="read-more-four" class="project-button">Read More</a>
             </div>
             <div class="project">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>Project title</div>
+                <a href="#projects" id="project-five" class="project-button">Project</a>
+                <a href="#projects" id="read-more-five" class="project-button">Read More</a>
             </div>
             <div class="project">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>Project title</div>
+                <a href="#projects" id="project-six" class="project-button">Project</a>
+                <a href="#projects" id="read-more-six" class="project-button">Read More</a>
             </div>
         </div>
+
+        <div>
+            <div id="contact-area">
+                <h3>Get In Touch</h3>
+                <p></p>
+            </div>
+            <div>
+                <h4>07871821096</h4>
+                <h4>jardine.peter.94@gmail.com</h4>
+            </div>
+            <div></div>
+            <form action="">
+                <input type="text">
+                <input type="text">
+                <input type="email">
+                <textarea></textarea>
+            </form>
+        </div>
+
 
     </div>
 </body>
