I added about. i styled about projects and contact

--- a/index.html
+++ b/index.html
@@ -49,54 +49,69 @@
 
         <div id="projects" class="projects">
             <div class="project">
-                <div>Project title</div>
-                <a href="#projects" id="project-one" class="project-button">Project</a>
-                <a href="#projects" id="read-more-one" class="project-button">Read More</a>
+                <div class="project-title">Netmatters Site Fascimilie</div>
+                <div class="project-buttons">
+                    <a href="#projects" id="project-one" class="project-button">Project</a>
+                    <a href="#projects" id="read-more-one" class="project-button">Read More</a>
+                </div>
             </div>
             <div class="project">
-                <div>Project title</div>
-                <a href="#projects" id="project-two" class="project-button">Project</a>
-                <a href="#projects" id="read-more-two" class="project-button">Read More</a>
+                <div class="project-title">Project title</div>
+                <div class="project-buttons">
+                    <a href="#projects" id="project-two" class="project-button">Project</a>
+                    <a href="#projects" id="read-more-two" class="project-button">Read More</a>
+                </div>
             </div>
             <div class="project">
-                <div>Project title</div>
-                <a href="#projects" id="project-three" class="project-button">Project</a>
-                <a href="#projects" id="read-more-three" class="project-button">Read More</a>
+                <div class="project-title">Project title</div>
+                <div class="project-buttons">
+                    <a href="#projects" id="project-three" class="project-button">Project</a>
+                    <a href="#projects" id="read-more-three" class="project-button">Read More</a>
+                </div>
             </div>
             <div class="project">
-                <div>Project title</div>
-                <a href="#projects" id="project-four" class="project-button">Project</a>
-                <a href="#projects" id="read-more-four" class="project-button">Read More</a>
+                <div class="project-title">Project title</div>
+                <div class="project-buttons">
+                    <a href="#projects" id="project-four" class="project-button">Project</a>
+                    <a href="#projects" id="read-more-four" class="project-button">Read More</a>
+                </div>
             </div>
             <div class="project">
-                <div>Project title</div>
-                <a href="#projects" id="project-five" class="project-button">Project</a>
-                <a href="#projects" id="read-more-five" class="project-button">Read More</a>
+                <div class="project-title">Project title</div>
+                <div class="project-buttons">
+                    <a href="#projects" id="project-five" class="project-button">Project</a>
+                    <a href="#projects" id="read-more-five" class="project-button">Read More</a>
+                </div>
             </div>
             <div class="project">
-                <div>Project title</div>
-                <a href="#projects" id="project-six" class="project-button">Project</a>
-                <a href="#projects" id="read-more-six" class="project-button">Read More</a>
+                <div class="project-title">Project title</div>
+                <div class="project-buttons">
+                    <a href="#projects" id="project-six" class="project-button">Project</a>
+                    <a href="#projects" id="read-more-six" class="project-button">Read More</a>
+                </div>
             </div>
         </div>
 
-        <div>
-            <div id="contact-area">
-                <h3>Get In Touch</h3>
-                <p></p>
-            </div>
+        <footer id="contact-area">
             <div>
+                <h2>Get In Touch</h2>
+                <p>Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex.</p>
+            </div>
+            <div id="contact-methods">
                 <h4>07871821096</h4>
                 <h4>jardine.peter.94@gmail.com</h4>
             </div>
-            <div></div>
+            <div>
+                <p> Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex. Dicit paulo delicata ea duo.</p>
+            </div>
             <form action="">
-                <input type="text">
-                <input type="text">
-                <input type="email">
-                <textarea></textarea>
+                <input type="text" placeholder="Full Name*">
+                <input type="email" placeholder="Email*">
+                <input type="text" placeholder="Subject*">
+                <textarea rows="40" cols="40">Message</textarea>
             </form>
-        </div>
+            
+        </footer>
 
 
     </div>
