Created new pages added hrefs to links

--- a/about.html
+++ b/about.html
@@ -20,14 +20,14 @@
     </div>
 
     <div class="big-nav">
-        <div class="block-letter"><a href="#">P</a></div>
+        <div class="block-letter"><a href="index.html">P</a></div>
         <ul class="big-nav-list">
-            <li><strong><a href="#projects">My Portfolio</a></strong></li>
+            <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
             <li><strong><a href="#">About Me</a></strong></li>
-            <li><strong><a href="#">Coding Examples</a></strong></li>
-            <li><strong><a href="#">SCS Scheme</a></strong></li>
+            <li><strong><a href="coding.html">Coding Examples</a></strong></li>
+            <li><strong><a href="SCSscheme.html">SCS Scheme</a></strong></li>
         </ul>
-        <div><a href="#contact-area">Contact Me</a></div>
+        <div><a href="index.html#contact-area">Contact Me</a></div>
         <div class="social-media">
             <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
