--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="block-letter"><a href="#">P</a></div>
         <ul class="big-nav-list">
             <li><a href="#projects">My Portfolio</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Coding Examples</a></li>
-            <li><a href="#">SCS Scheme</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="coding.html">Coding Examples</a></li>
+            <li><a href="SCSscheme.html">SCS Scheme</a></li>
         </ul>
         <div><a href="#contact-area">Contact Me</a></div>
         <div class="social-media">
@@ -43,7 +43,7 @@
             </div>
             <a href="#projects" id="scroll-area">
                 <div id="scroll-call">Scroll Down</div>
-                <div ><i id="scroll-call-arrow"></i></div>
+                <div><i class="fas fa-chevron-down"></i></div>
             </a>
         </header>
 
@@ -94,15 +94,17 @@
 
         <footer id="contact-area">
             <div>
-                <h2>Get In Touch</h2>
-                <p>Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex.</p>
-            </div>
-            <div id="contact-methods">
-                <h4>07871821096</h4>
-                <h4>jardine.peter.94@gmail.com</h4>
-            </div>
-            <div>
-                <p> Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex. Dicit paulo delicata ea duo.</p>
+                <div>
+                    <h2>Get In Touch</h2>
+                    <p>Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex.</p>
+                </div>
+                <div id="contact-methods">
+                    <a href="tel:078-718-21096"><h4>07871821096</h4></a>
+                    <a href="mailto:jardine.peter.94@gmail.com"><h4>jardine.peter.94@gmail.com</h4></a>
+                </div>
+                <div>
+                    <p> Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex. Dicit paulo delicata ea duo.</p>
+                </div>
             </div>
             <form action="">
                 <input type="text" placeholder="Full Name*">
@@ -110,6 +112,11 @@
                 <input type="text" placeholder="Subject*">
                 <textarea rows="40" cols="40">Message</textarea>
             </form>
+
+            <a href="#introduction" id="scroll-up">
+                <div><i class="fas fa-chevron-up"></i></div>
+                <div>Back to the Top.</div>
+            </a>
             
         </footer>
 
