Added pages, content and styled them

--- a/coding.html
+++ b/coding.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coding Examples</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
@@ -29,6 +29,53 @@
         <div><a href="index.html#contact-area">Contact Me</a></div>
         <div class="social-media">
             <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </div>
+
+    <h1>Coding Examples</h1>
+
+    <div id="coding-projects" class="projects">
+        <div class="project">
+            <div class="project-title">Netmatters Site Fascimilie</div>
+            <div class="project-buttons">
+                <a href="#projects" id="project-one" class="project-button">Project</a>
+                <a href="#projects" id="read-more-one" class="project-button">Read More</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-title">Project title</div>
+            <div class="project-buttons">
+                <a href="#projects" id="project-two" class="project-button">Project</a>
+                <a href="#projects" id="read-more-two" class="project-button">Read More</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-title">Project title</div>
+            <div class="project-buttons">
+                <a href="#projects" id="project-three" class="project-button">Project</a>
+                <a href="#projects" id="read-more-three" class="project-button">Read More</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-title">Project title</div>
+            <div class="project-buttons">
+                <a href="#projects" id="project-four" class="project-button">Project</a>
+                <a href="#projects" id="read-more-four" class="project-button">Read More</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-title">Project title</div>
+            <div class="coding-project-buttons">
+                <a href="#projects" id="project-five" class="project-button">Project</a>
+                <a href="#projects" id="read-more-five" class="project-button">Read More</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-title">Project title</div>
+            <div class="project-buttons">
+                <a href="#" id="project-six" class="project-button">Project</a>
+                <a href="#" id="read-more-six" class="project-button">Read More</a>
+            </div>
         </div>
     </div>
 </body>
