--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> Peter Jardine's Protfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -112,14 +112,12 @@
                 <input type="text" placeholder="Subject*">
                 <textarea rows="40" cols="40">Message</textarea>
             </form>
+        </footer>
 
             <a href="#introduction" id="scroll-up">
                 <div><i class="fas fa-chevron-up"></i></div>
-                <div>Back to the Top.</div>
+                <div>Back to Top.</div>
             </a>
-            
-        </footer>
-
 
     </div>
 </body>
