--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SCS Scheme</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
@@ -23,12 +23,40 @@
         <ul class="big-nav-list">
             <li><strong><a href="index.html#projects">My Portfolio</a></strong></li>
             <li><strong><a href="about.html">About Me</a></strong></li>
-            <li><strong><a href="coding.hmtl">Coding Examples</a></strong></li>
+            <li><strong><a href="coding.html">Coding Examples</a></strong></li>
             <li><strong><a href="#">SCS Scheme</a></strong></li>
         </ul>
         <div><a href="index.html#contact-area">Contact Me</a></div>
         <div class="social-media">
             <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </div>
+
+    <h1 id="SCSscheme-title">SCS Scheme</h1>
+
+    <div id="SCSscheme">
+
+        <div class="SCSscheme--card" id="SCSintroduction">
+            <h2 class="SCSscheme--card--title">Introduction to Scion Coalition Scheme</h2>
+            <p>The Scion Coalition Scheme is an intensive, specially tailored training program run by Netmatters in order to give willing candidates the opportunity to enter the industry as web developers.<br>
+                 Under the supervision of senior web developers, scions generally aim to complete training within six to nine months. The course is intensive and therefore the level of learning achieved is extensive in a short space of time.</p>
+        </div>
+        <div class="SCSscheme--card">
+            <h2 class="SCSscheme--card--title">Treehouse</h2>
+            <div>Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they?ve covered in certain areas.</div>
+            <h4>Score</h4>
+            <a href="https://teamtreehouse.com/peterjardine2" class="treehouse_profile">View my Profile</a>
+        </div>
+        <div class="SCSscheme--card">
+            <h2 class="SCSscheme--card--title">About Netmatters</h2>
+            <div>Established in 2008<br>
+                Norfolk's leading technology company<br>
+                Winner of the Princess Royal Training Award<br>
+                Winner of EDP Skills of Tomorrow Award<br>
+                80+ staff, 2 locations across Norfolk<br>
+                Digital Marketing, Website & Software development & IT Support<br>
+                Broad spectrum of clients, working nationwide<br>
+                Operate to strict company values</div>
         </div>
     </div>
 </body>
