--- a/about.html
+++ b/about.html
@@ -27,9 +27,10 @@
             <li><strong><a href="coding.html">Coding Examples</a></strong></li>
             <li><strong><a href="SCSscheme.html">SCS Scheme</a></strong></li>
         </ul>
-        <div><a href="index.html#contact-area">Contact Me</a></div>
+        <a href="index.html#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
         </div>
     </div>
 
