--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <li><a href="coding.html">Coding Examples</a></li>
             <li><a href="SCSscheme.html">SCS Scheme</a></li>
         </ul>
-        <div><a href="#contact-area">Contact Me</a></div>
+        <a href="#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
         </div>
     </div>
 
@@ -48,42 +49,42 @@
         </header>
 
         <div id="projects" class="projects">
-            <div class="project">
+            <div class="project project-mainpage">
                 <div class="project-title">Netmatters Site Fascimilie</div>
                 <div class="project-buttons">
                     <a href="#projects" id="project-one" class="project-button">Project</a>
                     <a href="#projects" id="read-more-one" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project">
+            <div class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" id="project-two" class="project-button">Project</a>
                     <a href="#projects" id="read-more-two" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project">
+            <div class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" id="project-three" class="project-button">Project</a>
                     <a href="#projects" id="read-more-three" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project">
+            <div class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" id="project-four" class="project-button">Project</a>
                     <a href="#projects" id="read-more-four" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project">
+            <div class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" id="project-five" class="project-button">Project</a>
                     <a href="#projects" id="read-more-five" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project">
+            <div class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
                     <a href="#projects" id="project-six" class="project-button">Project</a>
@@ -113,11 +114,12 @@
                 <textarea rows="40" cols="40">Message</textarea>
             </form>
         </footer>
-
-            <a href="#introduction" id="scroll-up">
+        <div id="scroll-up">
+            <a href="#introduction">
                 <div><i class="fas fa-chevron-up"></i></div>
                 <div>Back to Top.</div>
             </a>
+        </div>    
 
     </div>
 </body>
