Finishing up the last bits of styling.

--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
         </ul>
         <a href="index.html#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/Pjard94" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </div>
 
