--- a/coding.html
+++ b/coding.html
@@ -28,54 +28,54 @@
         </ul>
         <a href="index.html#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/Pjard94" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </div>
 
     <h1 id="coding-title">Coding Examples</h1>
 
     <div id="coding-projects" class="projects">
-        <div class="project coding-project">
+        <div id="project-one" class="project coding-project">
             <div class="project-title">Netmatters Site Fascimilie</div>
             <div class="project-buttons">
-                <a href="#projects" id="project-one" class="project-button">Project</a>
-                <a href="#projects" id="read-more-one" class="project-button">Read More</a>
+                <a href="#projects" class="project-button">Project</a>
+                <a href="#projects" class="project-button">Read More</a>
             </div>
         </div>
-        <div class="project coding-project">
+        <div id="project-two" class="project coding-project">
+            <div class="project-title">Axure Shopfront</div>
+            <div class="project-buttons">
+                <a href="https://ti09vc.axshare.com/" class="project-button">Project</a>
+                <!-- <a href="#projects" class="project-button">Read More</a> -->
+            </div>
+        </div>
+        <div id="project-three" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="project-buttons">
-                <a href="#projects" id="project-two" class="project-button">Project</a>
-                <a href="#projects" id="read-more-two" class="project-button">Read More</a>
+                <a href="#projects" class="project-button">Project</a>
+                <a href="#projects" class="project-button">Read More</a>
             </div>
         </div>
-        <div class="project coding-project">
+        <div id="project-four" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="project-buttons">
-                <a href="#projects" id="project-three" class="project-button">Project</a>
-                <a href="#projects" id="read-more-three" class="project-button">Read More</a>
+                <a href="#projects" class="project-button">Project</a>
+                <a href="#projects" class="project-button">Read More</a>
             </div>
         </div>
-        <div class="project coding-project">
-            <div class="project-title">Project title</div>
-            <div class="project-buttons">
-                <a href="#projects" id="project-four" class="project-button">Project</a>
-                <a href="#projects" id="read-more-four" class="project-button">Read More</a>
-            </div>
-        </div>
-        <div class="project coding-project">
+        <div id="project-five" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="coding-project-buttons">
-                <a href="#projects" id="project-five" class="project-button">Project</a>
-                <a href="#projects" id="read-more-five" class="project-button">Read More</a>
+                <a href="#projects" class="project-button">Project</a>
+                <a href="#projects" class="project-button">Read More</a>
             </div>
         </div>
-        <div class="project coding-project">
+        <div id="project-six" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="project-buttons">
-                <a href="#" id="project-six" class="project-button">Project</a>
-                <a href="#" id="read-more-six" class="project-button">Read More</a>
+                <a href="#" class="project-button">Project</a>
+                <a href="#" class="project-button">Read More</a>
             </div>
         </div>
     </div>
