--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </ul>
         <a href="#contact-area" class="contact-me-link">Contact Me</a>
         <div class="social-media">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/Pjard94" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </div>
 
@@ -49,46 +49,46 @@
         </header>
 
         <div id="projects" class="projects">
-            <div class="project project-mainpage">
+            <div id="project-one" class="project project-mainpage">
                 <div class="project-title">Netmatters Site Fascimilie</div>
                 <div class="project-buttons">
-                    <a href="#projects" id="project-one" class="project-button">Project</a>
-                    <a href="#projects" id="read-more-one" class="project-button">Read More</a>
+                    <a href="#projects" class="project-button">Project</a>
+                    <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
                 </div>
             </div>
-            <div class="project project-mainpage">
-                <div class="project-title">Project title</div>
+            <div id="project-two" class="project project-mainpage">
+                <div class="project-title">Axure Shopfront</div>
                 <div class="project-buttons">
-                    <a href="#projects" id="project-two" class="project-button">Project</a>
-                    <a href="#projects" id="read-more-two" class="project-button">Read More</a>
+                    <a href="https://ti09vc.axshare.com/" class="project-button">Project</a>
+                    <!-- <a href="#projects" class="project-button">Read More</a> -->
                 </div>
             </div>
-            <div class="project project-mainpage">
+            <div id="project-three" class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
-                    <a href="#projects" id="project-three" class="project-button">Project</a>
-                    <a href="#projects" id="read-more-three" class="project-button">Read More</a>
+                    <a href="#projects" class="project-button">Project</a>
+                    <a href="#projects" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project project-mainpage">
+            <div id="project-four" class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
-                    <a href="#projects" id="project-four" class="project-button">Project</a>
-                    <a href="#projects" id="read-more-four" class="project-button">Read More</a>
+                    <a href="#projects" class="project-button">Project</a>
+                    <a href="#projects" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project project-mainpage">
+            <div id="project-five" class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
-                    <a href="#projects" id="project-five" class="project-button">Project</a>
-                    <a href="#projects" id="read-more-five" class="project-button">Read More</a>
+                    <a href="#projects" class="project-button">Project</a>
+                    <a href="#projects" class="project-button">Read More</a>
                 </div>
             </div>
-            <div class="project project-mainpage">
+            <div id="project-six" class="project project-mainpage">
                 <div class="project-title">Project title</div>
                 <div class="project-buttons">
-                    <a href="#projects" id="project-six" class="project-button">Project</a>
-                    <a href="#projects" id="read-more-six" class="project-button">Read More</a>
+                    <a href="#projects" class="project-button">Project</a>
+                    <a href="#projects" class="project-button">Read More</a>
                 </div>
             </div>
         </div>
@@ -97,14 +97,14 @@
             <div>
                 <div>
                     <h2>Get In Touch</h2>
-                    <p>Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex.</p>
+                    <p>You can contact me anywhere using one of the contact links below.</p>
                 </div>
                 <div id="contact-methods">
                     <a href="tel:078-718-21096"><h4>07871821096</h4></a>
                     <a href="mailto:jardine.peter.94@gmail.com"><h4>jardine.peter.94@gmail.com</h4></a>
                 </div>
                 <div>
-                    <p> Lorem ipsum dolor sit amet, ius ei inani evertitur, ex tempor recteque reprehendunt vel. Ea vim aliquid disputationi, his indoctum persecuti cotidieque ex. Dicit paulo delicata ea duo.</p>
+                    <p> Otherwise you can fill out the form to the right. I will get back to you within 2 working days or within 3 if sent on a Friday or near a bank holiday.</p>
                 </div>
             </div>
             <form action="">
