Added finishing touches sorted IE compatability.

--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -45,8 +45,8 @@
         <div class="SCSscheme--card">
             <h2 class="SCSscheme--card--title">Treehouse</h2>
             <div>Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they?ve covered in certain areas.</div>
-            <h4>Score</h4>
-            <a href="https://teamtreehouse.com/peterjardine2" class="treehouse_profile">View my Profile</a>
+            <h4>Score: 7910</h4>
+            <a href="https://teamtreehouse.com/peterjardine2" target="_blank" class="treehouse_profile">View my Profile</a>
         </div>
         <div class="SCSscheme--card">
             <h2 class="SCSscheme--card--title">About Netmatters</h2>
