--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div id="project-two" class="project project-mainpage">
                 <div class="project-title">Axure Shopfront</div>
                 <div class="project-buttons">
-                    <a href="https://ti09vc.axshare.com/" class="project-button">Project</a>
+                    <a href="https://ti09vc.axshare.com/" target="_blank" class="project-button">Project</a>
                     <!-- <a href="#projects" class="project-button">Read More</a> -->
                 </div>
             </div>
@@ -104,14 +104,14 @@
                     <a href="mailto:jardine.peter.94@gmail.com"><h4>jardine.peter.94@gmail.com</h4></a>
                 </div>
                 <div>
-                    <p> Otherwise you can fill out the form to the right. I will get back to you within 2 working days or within 3 if sent on a Friday or near a bank holiday.</p>
+                    <p> Otherwise you can fill out the form to the right. I will get back to you within 2-3 days, it may take longer if sent on the weekends or bank holidays.</p>
                 </div>
             </div>
-            <form action="">
-                <input type="text" placeholder="Full Name*">
-                <input type="email" placeholder="Email*">
-                <input type="text" placeholder="Subject*">
-                <textarea rows="40" cols="40">Message</textarea>
+            <form>
+                <input class="contact-form-input" type="text" placeholder="Full Name*">
+                <input class="contact-form-input" type="email" placeholder="Email*">
+                <input class="contact-form-input" type="text" placeholder="Subject*">
+                <textarea class="contact-form-input" rows="40" cols="40" placeholder="Message"></textarea>
             </form>
         </footer>
         <div id="scroll-up">
