--- a/coding.html
+++ b/coding.html
@@ -36,42 +36,42 @@
     <h1 id="coding-title">Coding Examples</h1>
 
     <div id="coding-projects" class="projects">
-        <div id="project-one" class="project coding-project">
+        <div id="coding-project-one" class="project coding-project">
             <div class="project-title">Netmatters Site Fascimilie</div>
             <div class="project-buttons">
                 <a href="#projects" class="project-button">Project</a>
-                <a href="#projects" class="project-button">Read More</a>
+                <a href="https://github.com/Pjard94/Netmatters/tree/main/HTML_review" target="_blank" class="project-button">Github Code</a>
             </div>
         </div>
-        <div id="project-two" class="project coding-project">
+        <div id="coding-project-two" class="project coding-project">
             <div class="project-title">Axure Shopfront</div>
             <div class="project-buttons">
-                <a href="https://ti09vc.axshare.com/" class="project-button">Project</a>
+                <a href="https://ti09vc.axshare.com/" target="_blank" class="project-button">Project</a>
                 <!-- <a href="#projects" class="project-button">Read More</a> -->
             </div>
         </div>
-        <div id="project-three" class="project coding-project">
+        <div id="coding-project-three" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="project-buttons">
                 <a href="#projects" class="project-button">Project</a>
                 <a href="#projects" class="project-button">Read More</a>
             </div>
         </div>
-        <div id="project-four" class="project coding-project">
+        <div id="coding-project-four" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="project-buttons">
                 <a href="#projects" class="project-button">Project</a>
                 <a href="#projects" class="project-button">Read More</a>
             </div>
         </div>
-        <div id="project-five" class="project coding-project">
+        <div id="coding-project-five" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="coding-project-buttons">
                 <a href="#projects" class="project-button">Project</a>
                 <a href="#projects" class="project-button">Read More</a>
             </div>
         </div>
-        <div id="project-six" class="project coding-project">
+        <div id="coding-project-six" class="project coding-project">
             <div class="project-title">Project title</div>
             <div class="project-buttons">
                 <a href="#" class="project-button">Project</a>
