Added coding to fix issues raised in review

--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -39,18 +39,18 @@
 
         <div class="SCSscheme--card" id="SCSintroduction">
             <h2 class="SCSscheme--card--title">Introduction to Scion Coalition Scheme</h2>
-            <p>The Scion Coalition Scheme is an intensive, specially tailored training program run by Netmatters in order to give willing candidates the opportunity to enter the industry as web developers.<br>
+            <p class="SCSscheme--card--filler">The Scion Coalition Scheme is an intensive, specially tailored training program run by Netmatters in order to give willing candidates the opportunity to enter the industry as web developers.<br>
                  Under the supervision of senior web developers, scions generally aim to complete training within six to nine months. The course is intensive and therefore the level of learning achieved is extensive in a short space of time.</p>
         </div>
         <div class="SCSscheme--card">
             <h2 class="SCSscheme--card--title">Treehouse</h2>
-            <div>Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they?ve covered in certain areas.</div>
-            <h4>Score: 7910</h4>
+            <div class="SCSscheme--card--filler">Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they?ve covered in certain areas.</div>
+            <h4 class="SCSscheme--card--filler">Score: 7910</h4>
             <a href="https://teamtreehouse.com/peterjardine2" target="_blank" class="treehouse_profile">View my Profile</a>
         </div>
         <div class="SCSscheme--card">
             <h2 class="SCSscheme--card--title">About Netmatters</h2>
-            <div>Established in 2008<br>
+            <div class="SCSscheme--card--filler">Established in 2008<br>
                 Norfolk's leading technology company<br>
                 Winner of the Princess Royal Training Award<br>
                 Winner of EDP Skills of Tomorrow Award<br>
