--- a/coding.html
+++ b/coding.html
@@ -36,6 +36,7 @@
     <h1 id="coding-title">Coding Examples</h1>
 
     <div id="coding-projects" class="projects">
+        <!-- add a transition to the project titles to scale up and move to the center on hover -->
         <div id="coding-project-one" class="project coding-project">
             <div class="project-title">Netmatters Site Fascimilie</div>
             <div class="project-buttons">
