--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <div class="main">
 
         <header>
+            <div class="hero-image"></div>
             <div id="introduction">
-                <div ><h1 id="me">My Name is Peter Jardine</h1></div>
-                <div ><h3 id="role">I'm a Web Developer</h3></div>
-                
+                <h1 id="me">My Name is Peter Jardine</h1>
+                <h3 id="role">I'm a Web Developer</h3>
             </div>
             <a href="#projects" id="scroll-area">
                 <div id="scroll-call">Scroll Down</div>
@@ -48,7 +48,7 @@
             </a>
         </header>
 
-        <div id="projects" class="projects">
+        <div id="projects" class="projects projects-mainpage">
             <div id="project-one" class="project project-mainpage">
                 <div class="project-title">Netmatters Site Fascimilie</div>
                 <div class="project-buttons">
@@ -94,24 +94,26 @@
         </div>
 
         <footer id="contact-area">
-            <div>
+            <div id="contact-area-container">
                 <div>
                     <h2>Get In Touch</h2>
                     <p>You can contact me anywhere using one of the contact links below.</p>
                 </div>
                 <div id="contact-methods">
                     <a href="tel:078-718-21096"><h4>07871821096</h4></a>
-                    <a href="mailto:jardine.peter.94@gmail.com"><h4>jardine.peter.94@gmail.com</h4></a>
+                    <a id="contact-email-link" href="mailto:jardine.peter.94@gmail.com"><h4>jardine.peter.94@gmail.com</h4></a>
                 </div>
                 <div>
-                    <p> Otherwise you can fill out the form to the right. I will get back to you within 2-3 days, it may take longer if sent on the weekends or bank holidays.</p>
+                    <p> Otherwise you can fill out the form to the right. I will get back to you within 2-3 days,<br> it may take longer if sent on the weekends or bank holidays.</p>
                 </div>
             </div>
             <form>
-                <input class="contact-form-input" type="text" placeholder="Full Name*">
+                <input class="contact-form-input contact-name" id="contact-form-first" type="text" placeholder="First Name*">
+                <input class="contact-form-input contact-name" type="text" placeholder="Last Name*">
                 <input class="contact-form-input" type="email" placeholder="Email*">
                 <input class="contact-form-input" type="text" placeholder="Subject*">
                 <textarea class="contact-form-input" rows="40" cols="40" placeholder="Message"></textarea>
+                <input id="contact-form-submit" type="submit" value="Submit">
             </form>
         </footer>
         <div id="scroll-up">
