--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
                     <p>You can contact me anywhere using one of the contact links below.</p>
                 </div>
                 <div id="contact-methods">
-                    <a href="tel:078-718-21096"><h4>07871821096</h4></a>
-                    <a id="contact-email-link" href="mailto:jardine.peter.94@gmail.com"><h4>jardine.peter.94@gmail.com</h4></a>
+                    <a id="contact-telephone-link" href="tel:078-718-21096">07871821096</a>
+                    <a id="contact-email-link" href="mailto:jardine.peter.94@gmail.com">jardine.peter.94@gmail.com</a>
                 </div>
                 <div>
                     <p> Otherwise you can fill out the form to the right. I will get back to you within 2-3 days,<br> it may take longer if sent on the weekends or bank holidays.</p>
                 </div>
             </div>
             <form>
-                <input class="contact-form-input contact-name" id="contact-form-first" type="text" placeholder="First Name*">
-                <input class="contact-form-input contact-name" type="text" placeholder="Last Name*">
+                <input class="contact-form-input" id="contact-form-first" type="text" placeholder="First Name*">
+                <input class="contact-form-input" id="contact-form-last" type="text" placeholder="Last Name*">
                 <input class="contact-form-input" type="email" placeholder="Email*">
                 <input class="contact-form-input" type="text" placeholder="Subject*">
                 <textarea class="contact-form-input" rows="40" cols="40" placeholder="Message"></textarea>
