Fixed some things brought up in review

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div id="scroll-up">
             <a href="#introduction">
                 <div><i class="fas fa-chevron-up"></i></div>
-                <div>Back to Top.</div>
+                <div>Back to Top</div>
             </a>
         </div>    
 
